# ros-network-analysis

./: CMakeLists.txt  LICENSE  README.md  package.xml
ROS1_Network-Analysis-Package/launch/: Server-ping-only.launch  Server.launch
ROS1_Network-Analysis-Package/msg/: NetworkErrors.msg
ROS1_Network-Analysis-Package/scripts/: network_errors.py
ROS1_Network-Analysis-Package/src/: network_delay.cpp  server_network_delay.cpp
action/: Ping.action
datasets/internal/client/2G/trial1/: Throughput.py  combined_sync_data.csv  commandthroughputgraph.py  delay.csv  errors.csv  percentage.csv  rssi.csv  rssigraph.py  throughput.csv
datasets/internal/client/2G/trial2/: combined_sync_data.csv  delay.csv  errors.csv  percentage.csv  rssi.csv  rssi.py  throughput.csv
datasets/internal/client/5G/trial1/: delay.csv  errorgraph.py  errors.csv  percentage.csv  robotthroughputgraph.py  rssi.csv  throughput.csv
datasets/internal/client/5G/trial2/: combined_sync_data.csv  delay.csv  delay.py  errors.csv  percentage.csv  rssi.csv  throughput.csv
datasets/internal/server/2G/trial1/: delay.csv  errors.csv  percentage.csv  rssi.csv  throughput.csv
datasets/internal/server/2G/trial2/: combined_sync_data.csv  delay.csv  errors.csv  rssi.csv  throughput.csv
datasets/internal/server/5G/trial1short/: delay.csv  errors.csv  percentage.csv  rssi.csv  rssigraph.py  throughput.csv
datasets/internal/server/5G/trial2short/: combined_sync_data.csv  delay.csv  errors.csv  rssi.csv  throughput.csv
datasets/router/2G/trial1/: combined_sync_data.csv  delay.csv  delaygraph.py  errors.csv  errors.py  percentage.csv  rssi.csv  throughput.csv
datasets/router/2G/trial2/: combined_sync_data.csv  delay.csv  errors.csv  rssi.csv  rssigraph.py  throughput.csv
datasets/router/2G/trial3/: combined_sync_data.csv  throughput.csv
datasets/router/5G/trial1/: combined_sync_data.csv  delay.csv  errors.csv  percentage.py  rssi.csv  throughput.csv
datasets/router/5G/trial2/: combined_sync_data.csv  delay.csv  errors.csv  rssi.csv  throughput.csv
launch/: Client.launch  all_client.launch  wireless_quality.launch
msg/: LinkUtilization.msg  NetworkAnalysis.msg  WirelessLink.msg  WirelessLinkVector.msg
ros1_network_analysis/: README.md  package.xml
ros1_network_analysis/action/: Ping.action
ros1_network_analysis/msg/: NetworkAnalysis.msg  NetworkDelay.msg
ros1_network_analysis/scripts/: link_utilization.py  network_errors.py  wireless_quality.py
ros2-network-analysis/: CMakeLists.txt  package.xml
ros2-network-analysis/launch/: Client.launch
ros2-network-analysis/msg/: NetworkErrors.msg  WirelessLink.msg  WirelessLinkVector.msg
ros2-network-analysis/scripts/: link_utilization.py  network_errors.py  wireless_quality.py
ros2-network-analysis/src/: network_delay.cpp  ping_client.cpp  ping_service.cpp  server_network_delay.cpp
ros2_network_analysis_interface/: CMakeLists.txt  package.xml
ros2_network_analysis_interface/action/: Ping.srv
ros2_network_analysis_interface/msg/: LinkUtilization.msg  NetworkAnalysis.msg  NetworkDelay.msg
scripts/: link_utilization.py  network_errors.py  wireless_quality.py
src/: network_delay.cpp  server_network_delay.cpp
