<?xml version="1.0"?>
<package>
  <name>network_analysis</name>
  <version>0.2.0</version>
  <description>This is a ROS package that provide tools to analyze the wireless network quality and the traffic such as the signal quality, latency, throughput, link utilization, connection rates, error metrics, etc., between two ROS nodes/computers/machines.</description>
  <maintainer email="ramviyas@uga.edu">Ramviyas Parasuraman</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/network_analysis</url> -->
  <author email="ramviyas@uga.edu">Ramviyas Parasuraman</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
